objects/AdditionalInfo__c.object
<CustomObject>
    <fields>
        <fullName>ActiveCDRQualitativeData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active CDR Qualitative Data</label>
        <referenceTo>CDRQualitativeData__c</referenceTo>
        <relationshipLabel>Additional Info</relationshipLabel>
        <relationshipName>AdditionalInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseSafeId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>Tracks additional information for CDR Qualitative Data</description>
    <label>Additional Info</label>
    <nameField>
        <label>Additional Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Info</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Disclosures</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>ShortName__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AdditionalInfo__c.Disclosure</value>
        </filters>
        <label>Disclosures</label>
    </listViews>
    <listViews>
        <fullName>Risks</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>ShortName__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AdditionalInfo__c.Risk</value>
        </filters>
        <label>Risks</label>
    </listViews>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <description>Use this for Additional Information related to portfolio applications</description>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>AssetClass</fullName>
        <active>true</active>
        <description>Use this for Additional Information related to asset classes</description>
        <label>Asset Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disclosure</fullName>
        <active>true</active>
        <description>Use this for Additional Information related to disclosures</description>
        <label>Disclosure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>Use this for Additional Information related to risks</description>
        <label>Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trademark</fullName>
        <active>true</active>
        <description>Use this for Additional Information related to trademarks</description>
        <label>Trademark</label>
    </recordTypes>
</CustomObject>